--- a/src/app/search-leases/search-leases.component.html
+++ b/src/app/search-leases/search-leases.component.html
@@ -3,7 +3,6 @@
     <mat-form-field class="example-full-width" color="accent">
       <input matInput placeholder="Search by email" [formControl]="searchInput" class="search-input">
     </mat-form-field>
-
   </form>
   <mat-checkbox [(ngModel)]="hideFinishedLeases">Hide finished leases</mat-checkbox>
 </div>
@@ -11,8 +10,8 @@
 <div class='leases-container' *ngIf="!leasesFetchFailed">
   <app-leases-list
   [leases]="term=='' ? allLeases : searchLeases"
-  [hideFinishedLeases]='hideFinishedLeases'
-  ></app-leases-list>
+  [hideFinishedLeases]='hideFinishedLeases'>
+</app-leases-list>
 </div>
 
 <div class='search-error' *ngIf="leasesFetchFailed">
