Add login functionality

--- a/src/app/admin-panel/admin-panel.component.html
+++ b/src/app/admin-panel/admin-panel.component.html
@@ -3,5 +3,5 @@
   <div><b>Now: </b>{{currentDate | date:'dd MMM yyyy HH:mm:ss'}}</div>
 </div>
 
-<app-search-leases [currentDate]='currentDate'></app-search-leases>
+<app-search-leases></app-search-leases>
 
