--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -11,7 +11,7 @@
       <span id="sign-in">CONTACT</span>
     </a>
 
-    <a mat-button routerLink="/" color="accent">
+    <a mat-button routerLink="/login" color="accent">
       <i class="material-icons">account_circle</i>
       <span id="sign-in">SIGN IN</span>
     </a>
