--- a/src/app/book-snippet/book-snippet.component.css
+++ b/src/app/book-snippet/book-snippet.component.css
@@ -1,13 +1,27 @@
-.object-fit_fill { object-fit: fill }
-.object-fit_contain { object-fit: contain }
-.object-fit_cover { object-fit: cover }
-.object-fit_none { object-fit: none }
-.object-fit_scale-down { object-fit: scale-down }
+.object-fit_fill {
+  object-fit: fill
+}
+
+.object-fit_contain {
+  object-fit: contain
+}
+
+.object-fit_cover {
+  object-fit: cover
+}
+
+.object-fit_none {
+  object-fit: none
+}
+
+.object-fit_scale-down {
+  object-fit: scale-down
+}
 
 .example-card {
   max-width: 200px;
   margin: 0px 20px 0px 20px;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 img {
@@ -21,9 +35,3 @@ img {
   overflow: hidden !important;
   text-overflow: ellipsis;
 }
-
-/*
-.example-header-image {
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-  background-size: cover;
-} */
