--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="userInfo" (ngSubmit)="onSubmit()">
+<form [formGroup]="credentialsForm" (ngSubmit)="onSubmit()">
   <input type="text" formControlName="username" placeholder="username">
   <input type="text" formControlName="password" placeholder="password">
   <button type="submit">Log in</button>
