--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,25 @@
-.error-container{
-  color:red;
+.error-container {
+  color: red;
+}
+
+.login-container {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+}
+
+mat-card-header {
+  justify-content: center;
+}
+
+table {
+  width: 100%;
+}
+
+mat-form-field
+{
+  text-align: center;
 }
