--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,61 +1,59 @@
-<form [formGroup]="credentialsForm" (ngSubmit)="onSubmit()">
-  <input type="text" formControlName="username" placeholder="username">
-  <input type="text" formControlName="password" placeholder="password">
-  <button type="submit">Log in</button>
-</form>
+<div class='login-container'>
+  <mat-card class="example-card">
 
-<div class='error-container' *ngIf='!authenticated'>
-  <p>Your login credentials were wrong, try again!</p>
+    <mat-card-header>
+
+      <mat-card-title>Login</mat-card-title>
+
+    </mat-card-header>
+
+    <mat-card-content>
+
+      <form class="example-form">
+
+        <table class="example-full-width" cellspacing="0">
+
+          <tr>
+
+            <td>
+
+              <mat-form-field class="example-full-width">
+
+                <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
+
+              </mat-form-field>
+
+            </td>
+
+          </tr>
+
+          <tr>
+
+            <td>
+              <mat-form-field class="example-full-width">
+
+                <input matInput placeholder="Password" [(ngModel)]="password" type="password" name="password" required>
+
+              </mat-form-field>
+            </td>
+
+          </tr>
+        </table>
+
+      </form>
+
+      <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
+
+    </mat-card-content>
+
+    <mat-card-actions>
+
+      <button mat-raised-button (click)="onSubmit()" color="primary">Login</button>
+
+    </mat-card-actions>
+
+  </mat-card>
+  <div class='error-container' *ngIf='authenticationFailed'>
+    <p>Your login credentials were wrong, try again!</p>
+  </div>
 </div>
-
-<!-- <mat-card class="example-card">
-
-  <mat-card-header>
-
-    <mat-card-title>Login</mat-card-title>
-
-  </mat-card-header>
-
-  <mat-card-content>
-
-    <form class="example-form">
-
-      <table class="example-full-width" cellspacing="0">
-
-        <tr>
-
-          <td>
-
-            <mat-form-field class="example-full-width">
-
-            <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
-
-            </mat-form-field>
-
-          </td>
-
-        </tr>
-
-        <tr>
-
-        <td><mat-form-field class="example-full-width">
-
-          <input matInput placeholder="Password" [(ngModel)]="password"type="password" name="password" required>
-
-        </mat-form-field></td>
-
-      </tr></table>
-
-    </form>
-
-    <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
-
-  </mat-card-content>
-
-  <mat-card-actions>
-
-    <button mat-raised-button (click)="onSubmit()" color="primary">Login</button>
-
-  </mat-card-actions>
-
-</mat-card> -->
