--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -42,7 +42,7 @@
 
       </form>
 
-      <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
+      <mat-spinner [style.display]="tryLogin? 'inline-block' : 'none'"></mat-spinner>
 
     </mat-card-content>
 
