--- a/src/app/search-leases/search-leases.component.html
+++ b/src/app/search-leases/search-leases.component.html
@@ -4,12 +4,13 @@
       <input matInput placeholder="Search by email" [formControl]="searchInput" class="search-input">
     </mat-form-field>
   </form>
+  <mat-checkbox [(ngModel)]="hideFinishedLeases">Hide finished leases</mat-checkbox>
+
+
 </div>
 
 <div class='leases-container' *ngIf="!leasesFetchFailed">
-  <app-leases-list
-    [leases]="term=='' ? allLeases : searchLeases"
-    [hideFinishedLeases]='hideFinishedLeases'>
+  <app-leases-list [leases]="term=='' ? allLeases : searchLeases" [hideFinishedLeases]='hideFinishedLeases'>
   </app-leases-list>
 </div>
 
