Added signout functionality

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -26,7 +26,7 @@
       <span id="sign-in">SIGN IN</span>
     </a>
 
-    <a mat-button routerLink="/logout" color="accent">
+    <a mat-button (click)='logout()' color="accent">
       <i class="material-icons">subdirectory_arrow_right</i>
       <span id="sign-out">SIGN OUT</span>
     </a>
