--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -10,3 +10,12 @@ span {
 .logo{
   cursor:pointer;
 }
+.login-form{
+  display:flex;
+  flex-direction:column;
+  padding:10px 10px 10px 10px;
+}
+
+.red{
+  color:red;
+}
