--- a/src/app/book-snippet-list/book-snippet-list.component.html
+++ b/src/app/book-snippet-list/book-snippet-list.component.html
@@ -1,3 +1,3 @@
-<div class="books">
+<div class="books" *ngIf="books">
   <app-book-snippet *ngFor="let b of books" [book]="b" class="book-item" routerLink="/book/{{b.id}}"></app-book-snippet>
 </div>
