--- a/src/app/popular-books/popular-books.component.css
+++ b/src/app/popular-books/popular-books.component.css
@@ -1,4 +1,11 @@
 div {
   text-align: center;
   color: gray;
+  display: flex;
+  flex-direction: column;
+}
+
+.spinner {
+  margin-top: 50px;
+  align-self: center;
 }
