--- a/src/app/popular-books/popular-books.component.html
+++ b/src/app/popular-books/popular-books.component.html
@@ -1,10 +1,5 @@
 <div class="mat-headline">
   Most popular
+  <mat-spinner class="spinner" *ngIf="!popularBooks" color="accent"></mat-spinner>
 </div>
-<app-book-snippet-list [books]="popularBooks"></app-book-snippet-list>
-
-
-
-
-
-
+<app-book-snippet-list [books]="popularBooks" *ngIf="popularBooks"></app-book-snippet-list>
