--- a/src/app/components/admin-panel/admin-leases-list.component.html
+++ b/src/app/components/admin-panel/admin-leases-list.component.html
@@ -1,34 +1,38 @@
+<h3>All leases</h3>
 <div class='leases-container'>
+  <div>
+    <mat-form-field>
+      <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter by email">
+    </mat-form-field>
+    <mat-checkbox [(ngModel)]="hideFinishedLeases">Hide finished leases</mat-checkbox>
 
-  <table mat-table [dataSource]="leases" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> ID </th>
-      <td mat-cell *matCellDef="let lease"> {{lease.id}} </td>
-    </ng-container>
 
-    <ng-container matColumnDef="user">
-      <th mat-header-cell *matHeaderCellDef> Email </th>
+  </div>
+  <table mat-table [dataSource]="leases" class="mat-elevation-z8" matSort>
+
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
       <td mat-cell *matCellDef="let lease"> {{lease.user.email}} </td>
     </ng-container>
 
     <ng-container matColumnDef="timeOfLease">
-      <th mat-header-cell *matHeaderCellDef> Time of lease </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Time of lease </th>
       <td mat-cell *matCellDef="let lease"> {{lease.timeOfLease  | date:'dd-MMM yyyy   HH:mm:ss'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="dueTime">
-      <th mat-header-cell *matHeaderCellDef> Due time </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Due time </th>
       <td mat-cell *matCellDef="let lease"> {{lease.dueTime  | date:'dd-MMM yyyy   HH:mm:ss'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="inventoryBook">
-      <th mat-header-cell *matHeaderCellDef> Book name </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Book </th>
       <td mat-cell *matCellDef="let lease"> {{lease.inventoryBook.catalogBook.title}} </td>
     </ng-container>
 
     <ng-container matColumnDef="returned">
-      <th mat-header-cell *matHeaderCellDef> Returned </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Returned </th>
       <td mat-cell *matCellDef="let lease">{{lease.returned ? 'Yes' : 'No'}}</td>
     </ng-container>
 
@@ -37,8 +41,8 @@
         'red': isLeaseExpired(row.dueTime),
         'green':row.returned }" [hidden]="row.returned && hideFinishedLeases" (click)="openDialog(row)"></tr>
 
-      </table>
-      <mat-paginator [length]="100" [pageSize]="2" [pageSizeOptions]="[5, 10, 25, 100]"> </mat-paginator>
+  </table>
+  <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"> </mat-paginator>
 
   <div class='information'>
     <span class='bg bg-red'></span> <span class='description'>Not returned & expired</span>
