--- a/src/app/components/user-panel/user-leases-list.component.html
+++ b/src/app/components/user-panel/user-leases-list.component.html
@@ -32,7 +32,7 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{
-        'red': isLeaseExpired(row.dueTime),
+        'red': isLeaseExpired(row.dueTime) && !row.returned,
         'green':row.returned }" [hidden]="row.returned && hideFinishedLeases" (click)="openDialog(row)"></tr>
 
   </table>
