Fixed Button 'set as returned' showing to users too

--- a/src/app/components/dialogs/dialog-lease-details/dialog-lease-details.component.html
+++ b/src/app/components/dialogs/dialog-lease-details/dialog-lease-details.component.html
@@ -8,6 +8,6 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()" class="red">Exit</button>
-  <!-- TODO : If role == admin, display-->
-  <button mat-button [mat-dialog-close]="data.id" cdkFocusInitial class="green">Set as returned</button>
+
+  <button mat-button *ngIf="userRole=='ROLE_ADMIN'"[mat-dialog-close]="data.id" cdkFocusInitial class="green">Set as returned</button>
 </div>
