Improved code functionality for dialogs

--- a/src/app/components/dialogs/dialog-lease-details/dialog-lease-details.component.html
+++ b/src/app/components/dialogs/dialog-lease-details/dialog-lease-details.component.html
@@ -9,5 +9,5 @@
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()" class="red">Exit</button>
 
-  <button mat-button *ngIf="userRole=='ROLE_ADMIN'"[mat-dialog-close]="data.id" cdkFocusInitial class="green">Set as returned</button>
+  <button mat-button *ngIf="data.role=='ROLE_ADMIN'"[mat-dialog-close]="data.id" cdkFocusInitial class="green">Set as returned</button>
 </div>
